deprecated code updated